--- a/paas/src/main/resources/application-dev.yml
+++ b/paas/src/main/resources/application-dev.yml
@@ -1,5 +1,20 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost/paas?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: abc123
+    driver-class-name: com.mysql.cj.jdbc.Driver
+ 
+  redis:
+    database: 1
+    host: localhost
+    port: 6379
+    password: 
+    timeout: 500
+    
 paas:
   upload-path: /Volumes/SSD1/products/kfayun/paas/upload
+  build-path: /Volumes/SSD1/products/kfayun/paas/build
   apps-root: /Volumes/SSD1/products/kfayun/paas/apps
   kube-config: E:\\test\\kube.config
   exclude-namespaces: kube-,ingress-
