--- a/paas/pom.xml
+++ b/paas/pom.xml
@@ -76,7 +76,11 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
-
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-quartz</artifactId>
+		</dependency>
+		
 		<dependency>
 		    <groupId>io.kubernetes</groupId>
 		    <artifactId>client-java</artifactId>
