--- a/paas/src/test/resources/application-test.yml
+++ b/paas/src/test/resources/application-test.yml
@@ -1,10 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/paas?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-    username: root
-    password: abc123
-    driver-class-name: com.mysql.cj.jdbc.Driver
- 
+    url: jdbc:h2:mem:paas;MODE=MYSQL;INIT=RUNSCRIPT FROM './src/test/resources/db_init.sql'
+    username: 
+    password: 
+    driver-class-name: org.h2.Driver
+    hikari: 
+      maxLifetime: 1765000
+      maximumPoolSize: 5
+  
 paas:
   upload-path: /Volumes/SSD1/products/kfayun/paas/upload
   build-path: /Volumes/SSD1/products/kfayun/paas/build
@@ -28,3 +31,6 @@ paas:
     node-memory-normal: 0.75
     node-cpu-overload: 0.9
     node-cpu-normal: 0.75
+
+
+
